Fix: remove extra bottom spacing below sub-header

--- a/src/assets/sass/pages/_futsal.scss
+++ b/src/assets/sass/pages/_futsal.scss
@@ -1,7 +1,5 @@
 .futsal {
   .nav--secondary {
-    margin-bottom: 10px;
-
     li {
       width: 16.66%;
     }
